testsuite/tests/properties/invalid_matchers/node_after_default_1.lkt
import common

class ExampleNode: FooNode {
    @parse_field body: BodyNode

    fun prop(): Int = match node.body {
        case _           => 0
        case e: BodyNode => e.prop()
    }
}
